[gd_scene load_steps=38 format=3 uid="uid://brk8may0fiydq"]

[ext_resource type="Script" path="res://Scripts/game_manager.gd" id="1_r6v0w"]
[ext_resource type="PackedScene" uid="uid://ceiy2eebq27sd" path="res://scenes/levels/level2_old.tscn" id="2_as4q2"]
[ext_resource type="PackedScene" uid="uid://drxixdixet3ak" path="res://scenes/chroma_chaos.tscn" id="3_5i8h1"]
[ext_resource type="PackedScene" uid="uid://ddubbhm0iinsw" path="res://scenes/shockwave.tscn" id="4_uuglt"]
[ext_resource type="PackedScene" uid="uid://d3jdc3iu34hpr" path="res://scenes/arrow.tscn" id="5_rjhfv"]
[ext_resource type="AudioStream" uid="uid://c31wo40iw47d0" path="res://assets/sounds/healpop-46004.mp3" id="6_uxfwc"]
[ext_resource type="AudioStream" uid="uid://cswepxn7em1h8" path="res://assets/sounds/080245_sfx-magic-84935.mp3" id="7_1s8ql"]
[ext_resource type="TileSet" uid="uid://olai71bktxcp" path="res://scenes/levels/tile_map.tres" id="8_c3fy0"]
[ext_resource type="PackedScene" uid="uid://brnrrjstww3s4" path="res://scenes/main_character.tscn" id="9_1a2st"]
[ext_resource type="PackedScene" uid="uid://bgofhyubxfncd" path="res://scenes/collectable.tscn" id="10_y54q7"]
[ext_resource type="PackedScene" uid="uid://tsl01q3acwmc" path="res://scenes/enemies and traps/mushroom_enemy.tscn" id="11_8wtha"]
[ext_resource type="PackedScene" uid="uid://cuylnt1vnra5r" path="res://scenes/enemies and traps/chameleon.tscn" id="12_vj2tk"]
[ext_resource type="PackedScene" uid="uid://dfbv5uh0yrmf1" path="res://scenes/enemies and traps/turtle.tscn" id="13_o5byj"]
[ext_resource type="PackedScene" uid="uid://d1e35equn7een" path="res://scenes/enemies and traps/bee.tscn" id="14_dtqam"]
[ext_resource type="PackedScene" uid="uid://cit07k07hqplf" path="res://scenes/enemies and traps/plant.tscn" id="15_8eldx"]
[ext_resource type="PackedScene" uid="uid://1xltmv55jant" path="res://scenes/enemies and traps/spikes_2.tscn" id="16_pt65w"]
[ext_resource type="PackedScene" uid="uid://bwou04ab2t0gd" path="res://scenes/enemies and traps/moving_platform.tscn" id="17_3ppr4"]
[ext_resource type="PackedScene" uid="uid://4r0yhti5mlkd" path="res://scenes/enemies and traps/spiked_chain.tscn" id="18_uc0cw"]
[ext_resource type="PackedScene" uid="uid://deitxtunqmwtm" path="res://scenes/enemies and traps/false_block.tscn" id="19_wkjc1"]
[ext_resource type="Script" path="res://Scripts/fall_area.gd" id="20_d6ojc"]
[ext_resource type="Texture2D" uid="uid://de3ul1kce7ypb" path="res://assets/PineForestParallax/MorningLayer6.png" id="21_wwa4x"]
[ext_resource type="Texture2D" uid="uid://dqdq2msnvnnf4" path="res://assets/PineForestParallax/MorningLayer5.png" id="22_nqtk7"]
[ext_resource type="Texture2D" uid="uid://ufkeb2ct1p0u" path="res://assets/PineForestParallax/MorningLayer4.png" id="23_t4woq"]
[ext_resource type="Texture2D" uid="uid://daosphxj6dyv" path="res://assets/PineForestParallax/MorningLayer3.png" id="24_yg2ny"]
[ext_resource type="Texture2D" uid="uid://cfekmo3uqwtng" path="res://assets/PineForestParallax/MorningLayer2.png" id="25_dnxbm"]
[ext_resource type="Texture2D" uid="uid://baw5tjki5scus" path="res://assets/PineForestParallax/MorningLayer1.png" id="26_1c12i"]
[ext_resource type="Material" uid="uid://cjdh5qqujvcrr" path="res://shaders/foliage.tres" id="27_yaxtg"]
[ext_resource type="Texture2D" uid="uid://dli1oxbx3syj6" path="res://assets/Foliage/sprite - 09 bright.png" id="28_8p2fv"]
[ext_resource type="Texture2D" uid="uid://d2ffkpbntf060" path="res://assets/Foliage/sprite - 08.png" id="29_8yoc3"]
[ext_resource type="Texture2D" uid="uid://cahkt83wqnvye" path="res://assets/Foliage/sprite - 11.png" id="30_ojmsp"]
[ext_resource type="Texture2D" uid="uid://cmd0cas3vrkfk" path="res://assets/Foliage/NatureTiles.png" id="31_yo7do"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="32_eghc8"]
[ext_resource type="FontFile" uid="uid://b5q27on0ikd0e" path="res://assets/UI/Jersey10-Regular.ttf" id="33_rm7at"]
[ext_resource type="Texture2D" uid="uid://cntt433po72tv" path="res://assets/OtherSprites/heart.png" id="34_0ekq1"]
[ext_resource type="Script" path="res://scenes/levels/Pause.gd" id="35_43g0o"]



[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kime1"]
distance = 148.771

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pe8tn"]
bg_color = Color(0.94902, 0.392157, 0.419608, 0.301961)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1

[node name="Node" type="Node"]

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("player", "hearts")]
unique_name_in_owner = true
script = ExtResource("1_r6v0w")
player = NodePath("../Scene Objects/CharacterBody2D")
hearts = [NodePath("../UI/CoinsPanel/HeartsPanel/HBoxContainer/Heart"), NodePath("../UI/CoinsPanel/HeartsPanel/HBoxContainer/Heart2"), NodePath("../UI/CoinsPanel/HeartsPanel/HBoxContainer/Heart3")]
next_level = ExtResource("2_as4q2")
chroma_chaos = ExtResource("3_5i8h1")
shockwave = ExtResource("4_uuglt")
arrow = ExtResource("5_rjhfv")
FruitsLeftForArrowToShow = 3

[node name="finish" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("6_uxfwc")

[node name="Healed" type="AudioStreamPlayer" parent="GameManager"]
stream = ExtResource("7_1s8ql")

[node name="Scene Objects" type="Node" parent="."]

[node name="Blink" type="ColorRect" parent="Scene Objects"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -161.0
offset_top = -97.0
offset_right = 1548.0
offset_bottom = 711.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.286275)

[node name="TileMap" type="TileMap" parent="Scene Objects"]
texture_filter = 1
scale = Vector2(3, 3)
tile_set = ExtResource("8_c3fy0")
format = 2
layer_0/tile_data = PackedInt32Array(851968, 458752, 0, 851969, 458752, 0, 851970, 458752, 0, 851971, 458752, 0, 851972, 458752, 0, 851973, 458752, 0, 851974, 458752, 0, 851982, 524288, 1, 851986, 393216, 1, 851987, 524288, 1, 851988, 458752, 0, 851989, 458752, 0, 851990, 458752, 0, 851991, 458752, 0, 917503, 458752, 0, 851967, 524288, 5, 786431, 524288, 5, 720895, 524288, 5, 655359, 524288, 5, 589823, 524288, 5, 524287, 524288, 5, 458751, 524288, 5, 393215, 524288, 5, 327679, 524288, 5, 262143, 524288, 5, 196607, 524288, 5, 131071, 524288, 5, 65535, 524288, 5, -1, 589824, 4, -65536, 458752, 6, -65535, 458752, 6, -65534, 458752, 6, -65533, 458752, 6, -65532, 458752, 6, -65531, 458752, 6, -65530, 458752, 6, -65529, 458752, 6, -65528, 458752, 6, -65527, 458752, 6, -65526, 458752, 6, -65525, 458752, 6, -65524, 458752, 6, -65523, 458752, 6, -65522, 458752, 6, -65521, 458752, 6, -65520, 458752, 6, -65519, 458752, 6, -65518, 458752, 6, -65517, 458752, 6, -65516, 458752, 6, -65515, 458752, 6, -65514, 458752, 6, -65513, 458752, 6, -65512, 458752, 6, 851992, 458752, 0, 458752, 458752, 1, 524288, 458752, 1, 589824, 458752, 1, 786432, 524288, 1, 458753, 458752, 1, 524289, 524288, 1, 589825, 524288, 1, 720897, 524288, 1, 786433, 524288, 2, 720896, 524288, 1, 655360, 524288, 0, 655361, 524288, 1, 393216, 458752, 0, 393217, 458752, 0, 393218, 458752, 0, 393219, 458752, 0, 393220, 524288, 0, 458756, 524288, 2, 458755, 458752, 2, 458754, 458752, 2, 327680, 458752, 1, 327681, 458752, 1, 327682, 524288, 1, 262146, 524288, 0, 262145, 458752, 0, 262144, 458752, 0, 655373, 393216, 0, 720909, 393216, 1, 786445, 393216, 1, 655374, 524288, 0, 720910, 524288, 1, 786446, 524288, 1, 655378, 393216, 0, 720914, 393216, 1, 786450, 393216, 1, 720915, 524288, 1, 786451, 524288, 1, 458773, 393216, 0, 524309, 393216, 1, 589845, 393216, 1, 655381, 393216, 1, 720917, 393216, 1, 786453, 393216, 1, 458774, 458752, 0, 524310, 458752, 1, 589846, 458752, 1, 655382, 393216, 0, 720918, 393216, 1, 786454, 393216, 1, 458775, 458752, 0, 524311, 458752, 1, 589847, 458752, 1, 655383, 458752, 0, 720919, 458752, 1, 786455, 458752, 1, 65556, 393216, 0, 131092, 393216, 2, 65557, 458752, 0, 131093, 458752, 2, 65558, 524288, 0, 131094, 524288, 2, 655379, 524288, 0, 655375, 1114112, 0, 655376, 1179648, 0, 655377, 1245184, 0, 851993, 458752, 0, 851994, 458752, 0, 851995, 458752, 0, 851996, 458752, 0, 851997, 458752, 0, 851998, 458752, 0, 851999, 458752, 0, 852000, 458752, 0, 852001, 458752, 0, 852002, 458752, 0, 852003, 458752, 0, 852004, 524288, 0, 852009, 458752, 0, 852010, 458752, 0, 852011, 458752, 0, 852012, 458752, 0, 852013, 458752, 0, -65511, 458752, 6, -65510, 458752, 6, -65509, 458752, 6, -65508, 458752, 6, -65507, 458752, 6, -65506, 458752, 6, -65505, 458752, 6, -65504, 458752, 6, -65503, 458752, 6, -65502, 458752, 6, -65501, 458752, 6, -65500, 458752, 6, -65499, 458752, 6, -65498, 458752, 6, -65497, 458752, 6, -65496, 458752, 6, -65495, 458752, 6, -65494, 458752, 6, -65493, 458752, 6, -65492, 458752, 6, -65491, 458752, 6, 458776, 393216, 1, 393240, 393216, 0, 393241, 524288, 0, 458777, 458752, 1, 524312, 589824, 0, 524313, 655360, 0, 589848, 589824, 1, 589849, 655360, 1, 655385, 458752, 1, 655384, 524288, 0, 720920, 524288, 1, 786456, 524288, 1, 458778, 524288, 0, 524314, 524288, 1, 589850, 458752, 1, 655386, 458752, 2, 589851, 524288, 0, 655387, 524288, 2, 720921, 524288, 0, 131095, 1179648, 1, 131096, 1179648, 1, 131098, 1245184, 1, 131097, 1179648, 1, 131103, 1114112, 1, 65568, 393216, 0, 33, 393216, 0, 65570, 524288, 0, 65569, 458752, 1, 131105, 1179648, 1, 131104, 1179648, 1, 131107, 1179648, 1, 131108, 1179648, 1, 131106, 1179648, 1, 786457, 524288, 1, 852014, 458752, 0, 852015, 458752, 0, 852016, 458752, 0, 852017, 458752, 0, -65490, 458752, 6, -65489, 458752, 6, -65488, 458752, 6, -65487, 655360, 4, 49, 524288, 5, 65585, 524288, 5, 131121, 524288, 5, 196657, 524288, 5, 262193, 524288, 5, 327729, 524288, 5, 393265, 524288, 5, 458801, 524288, 5, 524337, 524288, 5, 589873, 524288, 5, 655409, 524288, 5, 720945, 524288, 5, 786481, 524288, 5, 327710, 393216, 0, 393246, 393216, 2, 458783, 393216, 1, 393247, 393216, 0, 327711, 458752, 0, 524319, 393216, 1, 589855, 393216, 1, 655391, 458752, 0, 589856, 524288, 1, 655392, 458752, 0, 524320, 524288, 1, 458784, 524288, 1, 393248, 524288, 0, 327712, 458752, 0, 393249, 458752, 2, 655393, 458752, 0, 327713, 458752, 0, 327714, 524288, 0, 393250, 524288, 2, 655395, 524288, 0, 655394, 458752, 0, 458789, 393216, 0, 458790, 524288, 0, 524326, 524288, 1, 524325, 393216, 2, 393242, 1114112, 0, 393243, 1179648, 0, 393244, 1179648, 0, 393245, 1245184, 0, 655390, 393216, 0, 786477, 524288, 0, 720940, 524288, 1, 786476, 458752, 1, 655403, 393216, 1, 720939, 393216, 1, 786475, 393216, 1, 524331, 524288, 0, 524330, 393216, 0, 589866, 393216, 2, 589867, 524288, 2, 786474, 393216, 0, 458795, 393216, 0, 655408, 393216, 0, 589872, 524288, 0, 589871, 393216, 0, 262192, 1114112, 1, 131117, 524288, 0, 131116, 393216, 0, 131112, 393216, 0, 131113, 524288, 0, 131110, 1245184, 1, 131109, 1179648, 1, 196648, 393216, 1, 196649, 524288, 1, 262184, 393216, 2, 262185, 524288, 2, 589862, 393216, 0, 655398, 524288, 0, 589863, 524288, 0, 524332, 524288, 1, 589868, 524288, 1, 655404, 524288, 1, 458796, 524288, 0, 327697, 1114112, 1, 327698, 1245184, 1, 786439, 393216, 0, 851975, 393216, 1, 786440, 458752, 0, 851976, 458752, 1, 851977, 524288, 1, 851981, 393216, 1, 786441, 524288, 0, 852008, 393216, 0)

[node name="CharacterBody2D" parent="Scene Objects" instance=ExtResource("9_1a2st")]
position = Vector2(327, 382)

[node name="Camera2D" type="Camera2D" parent="Scene Objects/CharacterBody2D"]
unique_name_in_owner = true
position = Vector2(-1, 0)
zoom = Vector2(1.455, 1.455)
limit_left = -48
limit_top = -50
limit_right = 2399
limit_bottom = 672
position_smoothing_enabled = true
position_smoothing_speed = 6.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = 0.17
drag_vertical_offset = -0.06

[node name="Collectables group" type="Node2D" parent="Scene Objects"]

[node name="Collectable" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(49, 162)

[node name="Collectable2" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(428, 165)

[node name="Collectable3" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(740, 161)

[node name="Collectable4" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(128, 584)

[node name="Collectable5" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(663, 450)

[node name="Collectable6" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(982, 593)

[node name="Collectable7" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(264, 332)

[node name="Collectable8" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(1145, 64)

[node name="Collectable9" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(858, 210)

[node name="Collectable10" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(1317, 400)

[node name="Collectable11" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(1276, 594)

[node name="Collectable12" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(1711, 60)

[node name="Collectable13" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(2301, 401)

[node name="Collectable14" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(2159, 61)

[node name="Collectable15" parent="Scene Objects/Collectables group" instance=ExtResource("10_y54q7")]
position = Vector2(1816, 302)

[node name="Enemies group" type="Node2D" parent="Scene Objects"]

[node name="MushroomEnemy3" parent="Scene Objects/Enemies group" instance=ExtResource("11_8wtha")]
position = Vector2(1336, 257)

[node name="MushroomEnemy4" parent="Scene Objects/Enemies group" instance=ExtResource("11_8wtha")]
position = Vector2(2112, 301)

[node name="Chameleon" parent="Scene Objects/Enemies group" instance=ExtResource("12_vj2tk")]
position = Vector2(791, 450)

[node name="Turtle" parent="Scene Objects/Enemies group" instance=ExtResource("13_o5byj")]
position = Vector2(1566, 213)

[node name="Bee" parent="Scene Objects/Enemies group" instance=ExtResource("14_dtqam")]
position = Vector2(176, 466)

[node name="Plant" parent="Scene Objects/Enemies group" node_paths=PackedStringArray("player") instance=ExtResource("15_8eldx")]
position = Vector2(1650, 435)
player = NodePath("../../CharacterBody2D")

[node name="Traps group" type="Node2D" parent="Scene Objects"]

[node name="spikes2" parent="Scene Objects/Traps group" instance=ExtResource("16_pt65w")]
position = Vector2(202, 265)

[node name="spikes4" parent="Scene Objects/Traps group" instance=ExtResource("16_pt65w")]
position = Vector2(1895, 409)

[node name="MovingPlatform" parent="Scene Objects/Traps group" instance=ExtResource("17_3ppr4")]
position = Vector2(660, 233)

[node name="Chained_Ball" parent="Scene Objects/Traps group" instance=ExtResource("18_uc0cw")]

[node name="FalseBlock" parent="Scene Objects/Traps group" instance=ExtResource("19_wkjc1")]
position = Vector2(504.165, 160)

[node name="FalseBlock2" parent="Scene Objects/Traps group" instance=ExtResource("19_wkjc1")]
position = Vector2(556.2, 160)

[node name="WorldBoundary" type="Area2D" parent="Scene Objects"]
position = Vector2(555, 1024)
script = ExtResource("20_d6ojc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scene Objects/WorldBoundary"]
shape = SubResource("WorldBoundaryShape2D_kime1")

[node name="ForestBackground" type="ParallaxBackground" parent="Scene Objects/WorldBoundary"]
scroll_offset = Vector2(69.84, 72.75)

[node name="Background" type="ParallaxLayer" parent="Scene Objects/WorldBoundary/ForestBackground"]
motion_scale = Vector2(0, 1)
motion_mirroring = Vector2(3200, 1800)

[node name="Sprite2D" type="Sprite2D" parent="Scene Objects/WorldBoundary/ForestBackground/Background"]
position = Vector2(-135, -117)
texture = ExtResource("21_wwa4x")
centered = false

[node name="Back" type="ParallaxLayer" parent="Scene Objects/WorldBoundary/ForestBackground"]
position = Vector2(-106, -65)
motion_scale = Vector2(0.1, 1)
motion_mirroring = Vector2(1600, 0)

[node name="Sprite2D" type="Sprite2D" parent="Scene Objects/WorldBoundary/ForestBackground/Back"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("22_nqtk7")
centered = false

[node name="BackMiddle" type="ParallaxLayer" parent="Scene Objects/WorldBoundary/ForestBackground"]
position = Vector2(-106, -65)
motion_scale = Vector2(0.3, 1)
motion_mirroring = Vector2(1600, 0)

[node name="Sprite2D" type="Sprite2D" parent="Scene Objects/WorldBoundary/ForestBackground/BackMiddle"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("23_t4woq")
centered = false

[node name="Middle" type="ParallaxLayer" parent="Scene Objects/WorldBoundary/ForestBackground"]
position = Vector2(-106, -65)
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(1600, 0)

[node name="Sprite2D" type="Sprite2D" parent="Scene Objects/WorldBoundary/ForestBackground/Middle"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("24_yg2ny")
centered = false

[node name="MiddleFront" type="ParallaxLayer" parent="Scene Objects/WorldBoundary/ForestBackground"]
position = Vector2(-106, -65)
motion_scale = Vector2(0.7, 1)
motion_mirroring = Vector2(1600, 0)

[node name="Sprite2D" type="Sprite2D" parent="Scene Objects/WorldBoundary/ForestBackground/MiddleFront"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("25_dnxbm")
centered = false

[node name="Front" type="ParallaxLayer" parent="Scene Objects/WorldBoundary/ForestBackground"]
position = Vector2(-106, -65)
motion_scale = Vector2(0.8, 1)
motion_mirroring = Vector2(1600, 0)

[node name="Sprite2D" type="Sprite2D" parent="Scene Objects/WorldBoundary/ForestBackground/Front"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("26_1c12i")
centered = false

[node name="CanvasModulate" type="CanvasModulate" parent="Scene Objects/WorldBoundary/ForestBackground"]
color = Color(0.992157, 0.596078, 0.662745, 1)

[node name="Foliage" type="Node2D" parent="Scene Objects"]
top_level = true

[node name="Sprite-09Bright" type="Sprite2D" parent="Scene Objects/Foliage"]
material = ExtResource("27_yaxtg")
position = Vector2(307, 557)
scale = Vector2(3, 3)
texture = ExtResource("28_8p2fv")

[node name="Sprite-08" type="Sprite2D" parent="Scene Objects/Foliage"]
material = ExtResource("27_yaxtg")
position = Vector2(874, 434)
scale = Vector2(3, 3)
texture = ExtResource("29_8yoc3")

[node name="Sprite-11" type="Sprite2D" parent="Scene Objects/Foliage"]
material = ExtResource("27_yaxtg")
position = Vector2(79, 589)
scale = Vector2(3, 3)
texture = ExtResource("30_ojmsp")

[node name="Vines" type="ParallaxBackground" parent="."]
layer = 1

[node name="ParallaxLayer" type="ParallaxLayer" parent="Vines"]
motion_scale = Vector2(2, 1)

[node name="Node2D" type="Node2D" parent="Vines/ParallaxLayer"]

[node name="NatureTiles2" type="Sprite2D" parent="Vines/ParallaxLayer/Node2D"]
position = Vector2(836, 116)
scale = Vector2(5, 5)
texture = ExtResource("31_yo7do")
region_enabled = true
region_rect = Rect2(204, 52, 16, 92)

[node name="NatureTiles" type="Sprite2D" parent="Vines/ParallaxLayer/Node2D"]
position = Vector2(840, 561)
scale = Vector2(5, 5)
texture = ExtResource("31_yo7do")
region_enabled = true
region_rect = Rect2(204, 52, 16, 92)

[node name="Node2D2" type="Node2D" parent="Vines/ParallaxLayer"]
position = Vector2(3710, 0)

[node name="NatureTiles2" type="Sprite2D" parent="Vines/ParallaxLayer/Node2D2"]
position = Vector2(0, 116)
scale = Vector2(5, 5)
texture = ExtResource("31_yo7do")
region_enabled = true
region_rect = Rect2(204, 52, 16, 92)

[node name="NatureTiles" type="Sprite2D" parent="Vines/ParallaxLayer/Node2D2"]
position = Vector2(0, 561)
scale = Vector2(5, 5)
texture = ExtResource("31_yo7do")
region_enabled = true
region_rect = Rect2(204, 52, 16, 92)

[node name="CanvasModulate" type="CanvasModulate" parent="Vines"]
visible = false
color = Color(0.796078, 0.415686, 0.827451, 1)

[node name="UI" type="CanvasLayer" parent="." node_paths=PackedStringArray("player", "game_manager")]
script = ExtResource("32_eghc8")
player = NodePath("../Scene Objects/CharacterBody2D")
game_manager = NodePath("../GameManager")

[node name="CoinsPanel" type="Panel" parent="UI"]
offset_left = 6.0
offset_top = 11.0
offset_right = 218.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pe8tn")

[node name="PointsLabel" type="Label" parent="UI/CoinsPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_right = -7.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("33_rm7at")
theme_override_font_sizes/font_size = 45
text = "Fruits: "
vertical_alignment = 1

[node name="HeartsPanel" type="Panel" parent="UI/CoinsPanel"]
layout_mode = 0
offset_left = 996.0
offset_top = -5.0
offset_right = 1132.0
offset_bottom = 44.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pe8tn")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CoinsPanel/HeartsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -18.5
offset_right = 63.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2

[node name="Heart" type="TextureRect" parent="UI/CoinsPanel/HeartsPanel/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("34_0ekq1")
expand_mode = 2

[node name="Heart2" type="TextureRect" parent="UI/CoinsPanel/HeartsPanel/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("34_0ekq1")
expand_mode = 2

[node name="Heart3" type="TextureRect" parent="UI/CoinsPanel/HeartsPanel/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("34_0ekq1")
expand_mode = 2

[node name="Pause" type="Node" parent="UI"]
script = ExtResource("35_43g0o")

[node name="PausePanel" type="Panel" parent="UI/Pause"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Pause/PausePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -173.0
offset_top = 40.0
offset_right = 173.0
offset_bottom = 123.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("33_rm7at")
theme_override_font_sizes/font_size = 76
text = "GAME PAUSED"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Pause/PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.5
offset_top = -82.0
offset_right = 223.5
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Resume" type="Button" parent="UI/Pause/PausePanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("33_rm7at")
theme_override_font_sizes/font_size = 67
text = "resume"

[node name="MainMenu" type="Button" parent="UI/Pause/PausePanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("33_rm7at")
theme_override_font_sizes/font_size = 67
text = "back to main menu"

[connection signal="finished" from="GameManager/finish" to="GameManager" method="_on_finish_finished"]
[connection signal="body_entered" from="Scene Objects/WorldBoundary" to="Scene Objects/WorldBoundary" method="_on_body_entered"]
[connection signal="pressed" from="UI/Pause/PausePanel/VBoxContainer/Resume" to="UI/Pause" method="_on_resume_pressed"]
[connection signal="pressed" from="UI/Pause/PausePanel/VBoxContainer/MainMenu" to="UI/Pause" method="_on_main_menu_pressed"]
